examples/test/testpolicy18197.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18197
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key17: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value27
          key14: value19
      podSelector:
        matchLabels:
          key37: value38
          key23: value49
          key49: value30
